# bevy-template

./: Cargo.toml
src/: main.rs
