[package]
name = "bevy-template"
version = "0.1.0"
edition = "2021"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.15.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
